# monkway

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-knowledge.yml
brand/: build_lockup.py  build_wordmark.py  logo-candidates.html
docs/roadmap/: index.md  v1-proxy.md  v2-router.md
knowledge/: AUTHORING.md  astro.config.mjs  package.json  tailwind.config.mjs
knowledge/src/components/: ExerciseBox.astro  Formula.astro  InsightBox.astro  LessonHeader.astro  LessonNav.astro  StepNumber.astro  TagBadge.astro
knowledge/src/components/demos/: BackoffDemo.astro  FallbackDemo.astro  GateDoorDemo.astro  NearestDemo.astro  ProxyTranslateDemo.astro  RetryableDemo.astro  StreamingDemo.astro  TimeoutDemo.astro  TokenBucketDemo.astro  TradeoffDemo.astro  _ExampleDragDemo.astro
knowledge/src/layouts/: LessonLayout.astro
knowledge/src/lib/: interact.ts
knowledge/src/pages/: _example-lesson.astro  glossary.astro  index.astro  learn.astro
knowledge/src/pages/cache/: exact-match-cache.astro  nearest-neighbor.astro  semantic-cache.astro
knowledge/src/pages/failure/: backoff-and-jitter.astro  idempotency.astro  timeouts-and-deadlines.astro  ways-a-call-fails.astro
knowledge/src/pages/gate/: the-request-journey.astro  what-a-gateway-is.astro  why-a-gateway.astro
knowledge/src/pages/ledger/: budgets-and-fairness.astro  rate-limiting.astro  tokens-and-cost.astro
knowledge/src/pages/proxy/: one-api-many-providers.astro  streaming-the-answer.astro  (+1 more)
knowledge/src/styles/: global.css
src/monkway/: __init__.py
tests/: test_smoke.py
(+3 files in other folders)
